--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.12"
 python-dotenv = "^1.0.1"
 pandas = "^2.2.2"
 requests = "^2.32.3"
+xlrd = "^2.0.1"
 
 
 [tool.poetry.group.lint.dependencies]
@@ -21,6 +22,7 @@ mypy = "^1.10.1"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.2.2"
+pytest-cov = "^5.0.0"
 
 [build-system]
 requires = ["poetry-core"]
