Создание services.py.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,9 @@ python-dotenv = "^1.0.1"
 pandas = "^2.2.2"
 requests = "^2.32.3"
 xlrd = "^2.0.1"
+pandas-stubs = "^2.2.2.240603"
+openpyxl = "^3.1.5"
+types-requests = "^2.32.0.20240622"
 
 
 [tool.poetry.group.lint.dependencies]
