main.py создан. Некоторые правки.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,6 +41,24 @@ python_version = "3.12"
 [tool.black]
 # Максимальная длина строки
 line-length = 119
+exclude = '''
+(
+  /(
+      \.eggs         # exclude a few common directories in the
+    | \.git          # root of the project
+    | \.hg
+    | \.mypy_cache
+    | \.tox
+    | \.venv
+    | _build
+    | buck-out
+    | build
+    | dist
+  )/
+  | foo.py           # also separately exclude a file named foo.py in
+                     # the root of the project
+)
+'''
 
 [tool.isort]
 # максимальная длина строки
